# ChatBot

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  TODO  pyproject.toml
docker/: .dockerignore  .env.example  README.md  docker-compose.yml
rag/: doc_rag.py
scripts/: check_env.sh  clean.sh  create_db.sh  init.sh  init_docker.sh  start.sh  stop.sh
src/agents/: __init__.py  base.py  comp_analyzing_agent.py  intent_guard_agent.py  rag_agent.py  universe_rag_agent.py
src/common/: compress.py  config.py  connection.py  db.py  download.py  file_path.py  logger.py  time_utils.py
src/frontend/: chat_ui.py  flow_ui.py  i18n.py  menu.py
src/rag/: __init__.py  doc_embedder.py  doc_processing.py  doc_rag.py  documents.py  embeddings.py  ob.py  rag.py  rag_graph.py
src/rag/embedding/: __init__.py  base.py  bge.py  ollama.py  openai.py  remote_openai.py  zhipu.py
src/tools/: __init__.py  convert_headings.py  embed_docs.py  extract.py  load.py  prepare_bgem3.py
