[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workshop"
version = "0.1.0"
description = "OceanBase AI Workshop - RAG Chatbot"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "yuyi", email = "yuyi.wsy@oceanbase.com" }
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "streamlit>=1.38.0",
    "pyobvector>=0.1.14",
    "flagembedding>=1.2.11",
    "peft>=0.13.1",
    "langchain-oceanbase>=0.2.0",
    "python-dotenv>=1.0.1",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
explicit = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = false
explicit = true
