[project]
name = "ai-workshop"
version = "0.1.0"
description = ""
authors = [
    { name = "yuyi", email = "yuyi.wsy@oceanbase.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "streamlit>=1.38.0,<2.0.0",
    "pyseekdb>=0.1.0",
    "langchain-oceanbase>=0.2.0,<0.3.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = false
