[project]
name = "ChatBot"
version = "0.2.0"
description = ""
authors = [
    { name = "OceanBase OpenSource Team", email = "open_oceanbase@oceanbase.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=1.0.0",
    "streamlit>=1.38.0",
    "pyseekdb>=0.1.0",
    "langchain-oceanbase>=0.3.2",
    "python-dotenv>=1.0.1",
    "powermem>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = false
